<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SearchFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:inputType="textAutoComplete"
        android:elevation="3dp"
        android:background="@drawable/search_view_background"

        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/searchView_query_hint"
        app:iconifiedByDefault="false"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hint_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.45"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/hint_imageView"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:src="@drawable/ic_container_ship"
            android:contentDescription="@string/ship_image_description"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/hint_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            app:layout_constraintVertical_bias="0.65"

            android:text="@string/search_hint"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:lineHeight="20dp"
            android:textSize="15sp"

            app:layout_constraintTop_toBottomOf="@id/hint_imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:targetApi="p" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/dummy_view"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:background="@android:color/transparent"

        app:layout_constraintTop_toTopOf="@id/searchView"
        app:layout_constraintBottom_toBottomOf="@id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- success case -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:paddingTop="30dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:overScrollMode="never"
        android:visibility="gone"

        android:clipToPadding="false"
        tools:listitem="@layout/search_result_row_layout"

        app:layout_constraintTop_toBottomOf="@id/dummy_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- loading case -->
    <ProgressBar
        android:id="@+id/loading_progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:indeterminateTint="@color/progress_bar_color"
        android:visibility="gone"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- failure case -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/error_imageView"
            android:layout_width="160dp"
            android:layout_height="160dp"

            android:contentDescription="@string/error_image_description"
            android:src="@drawable/ic_gold_mine"
            android:alpha="0.9"
            app:tint="@color/text"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/error_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:layout_marginTop="4dp"

            app:layout_constraintTop_toBottomOf="@id/error_imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            android:layout_marginTop="4dp"

            android:textAlignment="center"
            android:textColor="@color/text_lighter"
            android:textSize="14sp"
            tools:text="[ Error message ]"

            app:layout_constraintTop_toBottomOf="@id/error_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
