<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.BooksFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:paddingBottom="24dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"

                    app:lottie_rawRes="@raw/anim_boat"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/greetings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="22sp"
                    tools:text="Good Evening"

                    app:layout_constraintTop_toBottomOf="@id/animationView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/reading_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"

                android:textStyle="bold"
                android:text="@string/reading"
                android:textColor="@color/text"
                android:textSize="16sp"

                app:layout_constraintTop_toBottomOf="@id/header"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/reading_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"

                tools:text="2"
                android:textColor="@color/text"
                android:textSize="16sp"

                app:layout_constraintTop_toTopOf="@id/reading_label"
                app:layout_constraintBottom_toBottomOf="@+id/reading_label"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reading_recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:clipToPadding="false"

                tools:listitem="@layout/book_category_row_layout"
                tools:itemCount="2"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                app:layout_constraintTop_toBottomOf="@id/reading_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/reading_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"

                app:layout_constraintTop_toBottomOf="@id/reading_recyclerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/reading_icons"
                    android:layout_width="26dp"
                    android:layout_height="26dp"

                    android:src="@drawable/ic_spell_book"
                    app:tint="@color/text_lighter"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/reading_empty_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"

                    android:text="@string/empty_list"
                    android:textAlignment="center"
                    android:textColor="@color/text_lighter"
                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/reading_icons"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/completed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"

                android:textStyle="bold"
                android:text="@string/completed"
                android:textColor="@color/text"
                android:textSize="16sp"

                app:layout_constraintTop_toBottomOf="@id/reading_empty"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/completed_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"

                tools:text="3"
                android:textColor="@color/text"
                android:textSize="16sp"

                app:layout_constraintTop_toTopOf="@id/completed_label"
                app:layout_constraintBottom_toBottomOf="@+id/completed_label"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/completed_recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:clipToPadding="false"

                tools:listitem="@layout/book_category_row_layout"
                tools:itemCount="3"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                app:layout_constraintTop_toBottomOf="@id/completed_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/completed_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"

                app:layout_constraintTop_toBottomOf="@id/completed_recyclerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/completed_icon"
                    android:layout_width="26dp"
                    android:layout_height="26dp"

                    android:src="@drawable/ic_trophy"
                    app:tint="@color/text_lighter"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/completed_empty_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"

                    android:textColor="@color/text_lighter"
                    android:textSize="14sp"
                    android:text="@string/empty_list"
                    android:textAlignment="center"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/completed_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>